Changed the client to use lein instead

--- a/client/.gitignore
+++ b/client/.gitignore
@@ -25,3 +25,10 @@ closure-release-*
 builds
 .cljs*
 node_modules
+/checkouts
+pom.xml
+*.jar
+*.class
+.lein-deps-sum
+.lein-failures
+.lein-plugins
